# pixel-monsters

./: .gitignore  README.md
godot_project/: project.godot
godot_project/.godot/editor/: filesystem_cache10  project_metadata.cfg
godot_project/.godot/imported/: TX Plant with Shadow.png-65f2c0680dcc4c76a8a857556072ed39.ctex  TX Plant with Shadow.png-65f2c0680dcc4c76a8a857556072ed39.md5  (+16 more)
godot_project/docs/: ComplexPackageRoadmap.md  KnownDifferences.md  Quickstart.md
godot_project/scenes/: east_west_stair_runtime_demo.gd  east_west_stair_runtime_demo.gd.uid  east_west_stair_runtime_demo.tscn  east_west_stair_waypoint_demo.gd  east_west_stair_waypoint_demo.gd.uid  east_west_stair_waypoint_demo.tscn  workspace.tscn
godot_project/tests/: generate_synthetic_basic_fixture.py  run_basic_real_pack_acceptance.sh  run_basic_regressions.gd  run_basic_regressions.gd.uid  run_basic_regressions.sh  validate_generated_outputs.gd  validate_generated_outputs.gd.uid  validate_real_basic_outputs.gd  validate_real_basic_outputs.gd.uid  validate_real_basic_runtime_navigation.gd  validate_real_basic_runtime_navigation.gd.uid
godot_project/tools/: headless_basic_import.gd  headless_basic_import.gd.uid
tools/: cleanup_local_artifacts.sh
tools/godot_mcp/: README.md  grid_elevation_acceptance.py  layer1_wasd_reachability.py  layer_unreachable_wasd_attempts.py  navigation_inventory_report.py  navigation_override_acceptance.py  pyproject.toml  real_scene_acceptance.py  smoke_test.py
tools/godot_mcp/godot_mcp/: __init__.py  server.py  session.py
(+303 files in other folders)
